# Nooko_Your_InteriorDeco_Ai

./: .dockerignore  .gcloudignore  .gitignore  .markdownlint-cli2.jsonc  BACKEND_SSE_ENDPOINTS.md  CONSTRUCTION_TRANSLATOR_GUIDE.md  CONVERSATION_ARCHITECTURE.md  DEPLOYMENT_FIX.md  DEVELOPMENT_GUIDELINES.md  DEVELOPMENT_LOG.md  Dockerfile  Dockerfile.slack  FIXED_START_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  Makefile  PLAN_B_IMPLEMENTATION_SUMMARY.md  QUICK_START.sh  QUICK_START_FOR_AI.md  README.md  START_TESTING.md  TOKEN_OPTIMIZATION_GUIDE.md  UPDATES_SUMMARY.md  USER_FLOW.md  cloudbuild-slack.yaml  cloudbuild.slack.yaml  cloudbuild.summary-web-service.yaml  cloudbuild.transcription.yaml  cloudbuild.yaml  pyproject.toml  test_deployment.sh
.specify/: LLM-USAGE-GUIDE.md  QUICK-START.txt  README-STARTUP.md  STARTUP.md  SUBAGENT-GUIDE.md  (+8 more)
analysis-service/: Dockerfile  cloudbuild.yaml  pyproject.toml  requirements.txt
analysis-service/src/: __init__.py  main.py
analysis-service/src/agents/: base_agent.py  client_manager.py  client_manager_agent.py  client_manager_v2.py  construction_translator.py  contractor_agent.py  designer_agent.py
analysis-service/src/api/: projects.py
analysis-service/src/models/: project.py
analysis-service/src/services/: conversation_service.py  database_service.py  gemini_service.py  image_generation_service.py  image_service.py  llm_service.py  parsing_service.py  pdf_service.py  secret_service.py  spec_tracking.py  task_dispatcher.py
analysis-service/tests/: conftest.py  test_api.py  test_conversation_events.py
(+119 files in other folders)
