[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-service"
version = "0.0.1"
authors = [
  { name="AI Assistant", email="assistant@example.com" },
]
description = "Backend service for Interior Deco AI Partner"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
